test/Harper/Tests/Bad/issue023_thisOutsideOfMember.har
main :: sideeffect -> ();
main = {
  eval printLn this ();
};