test/Harper/Tests/Bad/issue023_thisOutsideOfMember.out
Error: cannot use the `this` identifier outside of a member function.
During evaluation of:
 this
Located at line 3 column 16

Execution terminated with an error: type error.